<resources>
    <string name="app_name">Tip Time</string>
    <string name="service">How was the service?</string>
    <string name="amazing">Amazing (20%)</string>
    <string name="good">Good (18%)</string>
    <string name="okay">Okay (15%)</string>
    <string name="round_up">Round up the tip?</string>
    <string name="cost_of_service">Cost of the service</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount_hint">Tip Amount</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>